fixed footer links (hint: z-index -1, guess why <.<)

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,7 @@
+.body {
+    isolation: isolate;
+}
+
 .main {
     background-color: var(--body-bg-color);
 }
